--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Welcome to TOURVIA</h1>
+                <h1>Welcome to TOURVIA!</h1>
                 <p>Welcome to Tourvia where u can know more about ur designated places through Chatbot.</p>
                 
             </div>
