--- a/hampi.html
+++ b/hampi.html
@@ -15,17 +15,14 @@
         body {
     line-height: 1.6;
     color: #333;
-    background: linear-gradient(to bottom, #a8dadc, #f1faee);
-    background-image: url('https://i.imgur.com/7vJ6gJf.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    background-color: #ffffff;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
 }
+
 
 
         header {
