--- a/hampi.html
+++ b/hampi.html
@@ -15,7 +15,8 @@
         body {
     line-height: 1.6;
     color: #333;
-    background-color: #ffffff;
+    background-color: #ffffff; /* PURE WHITE */
+    background-image: none; /* REMOVE any background images */
     height: 100%;
     display: flex;
     flex-direction: column;
