--- a/hampi.html
+++ b/hampi.html
@@ -15,8 +15,11 @@
         body {
     line-height: 1.6;
     color: #333;
-    background-color: #ffffff; /* PURE WHITE */
-    background-image: none; /* REMOVE any background images */
+    background-color: #ffffff; /* pure white */
+    background-image: none !important; /* super-force no background */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     height: 100%;
     display: flex;
     flex-direction: column;
