--- a/hampi.html
+++ b/hampi.html
@@ -12,20 +12,17 @@
             font-family: 'Arial', sans-serif;
         }
 
-        body {
-    line-height: 1.6;
-    color: #333;
-    background-color: #ffffff; /* pure white */
-    background-image: none !important; /* super-force no background */
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+        .bg-image {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+    object-fit: cover;
+    z-index: -1; /* keeps it behind everything */
+    opacity: 0.9; /* optional: make it a bit transparent if needed */
 }
+
 
 
 
@@ -185,6 +182,7 @@
     </style>
 </head>
 <body>
+    <img src="your-image.jpg" alt="Background" class="bg-image">
 
     <header>
         Designation - Hampi
