--- a/hampi.html
+++ b/hampi.html
@@ -182,7 +182,7 @@
     </style>
 </head>
 <body>
-    <img src="your-image.jpg" alt="Background" class="bg-image">
+    <img src="bg.jpg" alt="Background" class="bg-image">
 
     <header>
         Designation - Hampi
