--- a/Shivanasamudra.html
+++ b/Shivanasamudra.html
@@ -194,7 +194,7 @@
     <div class="container">
         <div class="card">
             <div class="img-container">
-                <img src="sm.jpg" alt="Shivanasamudra Image" />
+                <img src="smm.jpeg" alt="Shivanasamudra Image" />
             </div>
             <div class="intro">
                 Located in Karnataka, India, Shivanasamudra Falls is a majestic segmented waterfall on the Cauvery River. It splits into two main falls—Gaganachukki and Bharachukki—creating a breathtaking view, especially during the monsoon. 
