services page updated

--- a/services.html
+++ b/services.html
@@ -222,9 +222,8 @@
                         <img src="cb.jpg" alt="Mission Image" style="width: 100%; height: 100%; object-fit: cover;" />
                     </div>
                     <div class="service-content">
-                        <h3>Customized chatbot</h3>
-                        <p>personalized chatbot with has the options that you look for when u are lazy to type it all and its timesaving too!</p>
-
+                        <h3>Customized Options</h3>
+                        <p>personalized options where u just have to choose ur destiantion and choose the preferred requirements to get what you want </p>
                     </div>
                 </div>
                 
