--- a/about.html
+++ b/about.html
@@ -213,6 +213,7 @@
     </style>
 </head>
 <body>
+    <a href="explore.html" class="explore-button">Explore</a>
     <header>
         <div class="container">
             <nav>
