--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="profile.html" title="Profile">
+                        <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="Profile" width="30" height="30" style="border-radius: 50%;" />
+                    </a></li>
                 </ul>
             </nav>
         </div>
@@ -160,7 +163,8 @@
             <div class="hero-content">
                 <h1>Welcome to TOURVIA!</h1>
                 <p>Welcome to Tourvia where u can know more about ur designated places through Chatbot.</p>
-                <a href="explore.html" class="explore-button">Explore</a>
+                <a href="login.html" class="explore-button">Login / Signup</a>
+
 
                 
             </div>
