--- a/signup.html
+++ b/signup.html
@@ -111,13 +111,14 @@
 
       // Send to backend
       try {
-        const response = await fetch("http://localhost:3000/signup", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify({ username, email, password })
-        });
+        const response = await fetch("/signup", {
+  method: "POST",
+  headers: {
+    "Content-Type": "application/json"
+  },
+  body: JSON.stringify({ username, email, password })
+});
+
 
         const result = await response.text();
 
