--- a/login.html
+++ b/login.html
@@ -117,13 +117,14 @@
       }
 
       try {
-        const response = await fetch("http://localhost:3000/login", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify({ email, password })
-        });
+        const response = await fetch("/login", {
+  method: "POST",
+  headers: {
+    "Content-Type": "application/json"
+  },
+  body: JSON.stringify({ email, password })
+});
+
 
         const result = await response.text();
 
