--- a/explore.html
+++ b/explore.html
@@ -137,6 +137,8 @@
              </div>
             <div class="options">
                 <a href="hampi.html" class="dot-link"><div class="dot"></div><span>Hampi</span></a>
+                <a href="ajanta.html" class="dot-link"><div class="dot"></div><span>Ajanta Caves</span></a>
+                <a href="sun.html" class="dot-link"><div class="dot"></div><span>Sun Temple</span></a>
                 
             </div>
         </div>
