--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Welcome to TOURVIA!</h1>
-                <p>Welcome to Tourvia where u can know more about ur designated places through Chatbot.</p>
-                <a href="login.html" class="explore-button">Login / Signup</a>
+                <p>Welcome to Tourvia where u can know more about ur designated places through some in-built options.</p>
+                <a href="explore.html" class="explore-button">Explore</a>
 
 
                 
