--- a/explore.html
+++ b/explore.html
@@ -151,6 +151,8 @@
             </div>
             <div class="options">
                 <a href="valley.html" class="dot-link"><div class="dot"></div><span>Valley of Flowers National Park</span></a>
+                <a href="arya.html" class="dot-link"><div class="dot"></div><span>Arya Vaidya Sala</span></a>
+                <a href="bio.html" class="dot-link"><div class="dot"></div><span>Khangchendzonga Biosphere Reserve</span></a>
                 
             </div>
         </div>
@@ -163,6 +165,8 @@
             </div>
             <div class="options">
                 <a href="Shivanasamudra.html" class="dot-link"><div class="dot"></div><span>Shivanasamudra</span></a>
+                <a href="noh.html" class="dot-link"><div class="dot"></div><span>Nohkalikai Falls</span></a>
+                <a href="dudh.html" class="dot-link"><div class="dot"></div><span>Dudhsagar Falls</span></a>
                 
             </div>
         </div>
